k8s/networking/identity-postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: identity-postgres-service
spec:
  type: ClusterIP
  selector:
    app: identity-postgres
  ports:
    - port: 5432
      targetPort: tcp-connection
