k8s/networking/identity-service.yml
apiVersion: v1
kind: Service
metadata:
  name: identity-service
spec:
  type: ClusterIP
  selector:
    app: shop-identity
  ports:
    - name: http-web
      targetPort: http-web
      port: 8080
      protocol: TCP
