k8s/networking/nginx-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - shop-gateway
  http:
    - match:
        - uri:
            prefix: /nginx
      rewrite:
        uri: /
      route:
        - destination:
            port:
              number: 80
            host: nginx-service.default.svc.cluster.local
