k8s/networking/identity-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: identity-virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - shop-gateway
  http:
    - match:
        - uri:
            prefix: /api/auth
      rewrite:
        uri: /auth
      route:
        - destination:
            port:
              number: 8080
            host: identity-service.default.svc.cluster.local
    - match:
        - uri:
            prefix: /api/users
      rewrite:
        uri: /users
      route:
        - destination:
            port:
              number: 8080
            host: identity-service.default.svc.cluster.local
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: identity-authorization
spec:
  selector:
    matchLabels:
      app: shop-identity
  action: ALLOW
  rules:
    - to:
        - operation:
            methods: ["*"]
